cabal-version:       >=1.10
name:                test
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              David Johnson
maintainer:          djohnson.m@gmail.com
copyright:           David Johnson (c) 2020
category:            Data
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable main
  main-is:
    Test.hs
  build-depends:
    base < 5, lens
  default-language:
    Haskell2010
